# temporal-manifolds

./: .gitignore  README.md  ROADMAP.md  pyproject.toml
configs/eap_ig/: (1)FM_4B_explicit_GC.yaml  (1)FM_4B_implicit_GC.yaml  (A)FM_4B_explicit_GC.yaml  (A)FM_4B_implicit_GC.yaml  (One)FM_4B_explicit_GC.yaml  (One)FM_4B_implicit_GC.yaml  (X)FM_4B_explicit_GC.yaml  (X)FM_4B_implicit_GC.yaml  (a_)FM_4B_explicit_GC.yaml  (a_)FM_4B_implicit_GC.yaml  (dot)FM_4B_explicit_GC.yaml  (dot)FM_4B_implicit_GC.yaml  (i)FM_4B_explicit_GC.yaml  (i)FM_4B_implicit_GC.yaml
data/binary_choice_questions/: temporal_scope_explicit_expanded_500_debiased.json  temporal_scope_implicit_expanded_500_debiased.json
experiments/01_parametric_dataset/: README.md  run.py
experiments/02_activation_caching/: README.md
experiments/03_geometric_modeling/: README.md
experiments/04_constraint_phrasing/: README.md
experiments/05_linear_baseline/: README.md
experiments/06_scenario_consistency/: README.md
experiments/07_predictive_model/: README.md
experiments/08_evaluation/: README.md
experiments/09_cross_model/: README.md
src/temporal_manifolds/: __init__.py
src/temporal_manifolds/activations/: __init__.py
src/temporal_manifolds/dataset/: __init__.py  generate.py
src/temporal_manifolds/eap_ig/: eap_ig_inputs_QandA.py  eap_ig_qanda_common.py  eap_ig_qanda_pipeline.py  eap_ig_qanda_upload.py
src/temporal_manifolds/evaluation/: __init__.py
src/temporal_manifolds/geometry/: __init__.py
src/temporal_manifolds/models/: __init__.py
src/temporal_manifolds/utils/: activation_dict.py  activation_utils.py  gradient_based_attribution.py  hook_utils.py  tokenizer.py  (+1 more)
tests/: test_imports.py
(+2 files in other folders)
