[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "temporal-manifolds"
version = "0.1.0"
description = "Experiments on the geometric structure of LLM residual-stream activations under temporal/planning-horizon phrasings."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "latents @ git+https://github.com/justinshenk/latents.git@257924b49ee5cc95c7e818d011d99a05bf875705",
    "huggingface-hub>=0.31.0",
    # torch capped at <2.3 so macOS x86_64 (Intel) wheels are available;
    # Linux / Apple Silicon will resolve to a newer version naturally.
    "torch>=2.0.0,<2.3.0",
    "transformer_lens>=2.0.0",
    "transformers>=4.40.0",
    "nnsight>=0.3.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",
    "plotly>=6.5.1",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "tiktoken>=0.5.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5", "black>=24.0", "nbstripout>=0.7"]
api = ["openai>=1.0.0", "anthropic>=0.25.0"]
# Manifold-projection deps. Heavy build (llvmlite); install only when needed
# for experiments 03/06.
viz = ["umap-learn>=0.5.11", "pacmap>=0.9.1"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["temporal_manifolds*"]

[tool.setuptools.package-dir]
"" = "src"

[tool.uv]
prerelease = "allow"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
